[package]
name = "rigos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.7.0"
clap = {version="4.5.7",features = ["derive"]}
colored = "2.1.0"
markdown = "1.0.0-alpha.17"
serde = {version="1.0.203",features = ["derive"]}
serde_json = "1.0.117"
toml = "0.8.14"
walkdir = "2.5.0"
minijinja = "2.0.2"
chrono = { version = "0.4.38", features = ["serde"] }
