[package]
name = "rigos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
markdown = "1.0.0-alpha.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
walkdir = "2.5.0"
minijinja = { version = "2.0.2", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
notify = "6.1.1"
tokio = { version = "1.39.2", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "macros",
    "tracing",
] }
warp = "0.3.7"
serde_yml = "0.0.12"
pulldown-cmark = "0.12.2"
anyhow = "1.0.95"
log = "0.4.25"
once_cell = "1.20.2"
env_logger = "0.11.6"
